# open-source-website

./: .claude.md  .gitignore  .lycheeignore  CLAUDE.md  CONTRIBUTING.md  FILTER_FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  NETLIFY_SETUP.md  README.md  _quarto.yml  hugo.development.toml  hugo.toml  justfile  netlify.toml  note-2026-05-28.md  package-lock.json  package.json  research.md  resources-term-enhancement-plan.md  rstudio-posts-classification.json  rstudio-posts-classification.md  safelist.txt  tailwind.config.js
.github/: CODEOWNERS  pull_request_template.md
archetypes/: blog.md
content/: _index.md  _quarto.yml
content/blog/great-tables/pointblank-intro/: index.md  index.qmd  pyproject.toml
content/blog/great-tables/pointblank-intro/datasets/: game_revenue.ddb
data/: cards.yaml  filters.yaml  github-orgs.toml  github-repos.toml  items.yaml  software-match-ignore.toml  topics.yaml  videos.toml  youtube.toml
layouts/: 404.html  index.html
scripts/: check-blog-images.py  check-blog-links.py  create-cheatsheet-thumbnails.py  create-hex-logo.py  create-hex-logos.py  create-new-software.py  download-production-content.py  download-software-images.py  download-software-readmes.py  download-youtube-audio.py  extract-blog-metadata.R  extract-software-colors.py  extract_freeze.py  find-github-repos.py  fix-markdown-authors.sh  format-transcriptions.py  import-cheatsheets.py  lychee-errors.py  move-static-images-to-posts.py  port-ai-post.sh  port-education-post.sh  port-quarto-post.sh  port-rstudio-post.sh  port-tidyverse-post.sh  remove-plain-author.sh  (+10 more)
(+5914 files in other folders)
